--- a/assets/style/scss/_main.scss
+++ b/assets/style/scss/_main.scss
@@ -215,7 +215,7 @@ small {
 
 /* Footer ******************************************************************/
 #footer {
-  margin: -1px 0 0;
+  // margin: -1px 0 0;
   background-color: $blue;
   position: relative;
   z-index: 1050;
@@ -238,7 +238,7 @@ small {
         li {
 
           a {
-            font-size: 14px;
+            font-size: 13px;
             font-weight: bold;
             color: #b4bed4;
 
@@ -4100,6 +4100,7 @@ small {
 
   #getintouch {
     margin-top: -2px;
+    margin-bottom: -2px;
     opacity: 1;
 
     .content {
